:construction::arrow_up: fix button font and jcropper
* in bf63ff4 removing the asterisk (a default CSS bug)
  made this a red opaque bg.
  Now Im fixing it again and ensuring no more bugs.
* add font family to buttons.
  This improves text vertical alignment.
* fix typo in copyright header.
* bump to v1.2.1 beta

--- a/userstyles-inspired-dark.css
+++ b/userstyles-inspired-dark.css
@@ -1,7 +1,7 @@
 @-moz-document domain("userstyles.org") {
 	/*! Name    : Userstyles Inspired Dark */
-	/*! Version : 1.2.0 beta */
-	/*! Author  : Style-it by: the-j0k3r */
+	/*! Version : 1.2.1 beta */
+	/*! Author  : Style-it Themes by: the-j0k3r */
 	/*! Repo    : https://github.com/style-it/userstyles-inspired-dark */
 	/*! License : CC-BY-SA-4.0 https://github.com/style-it/userstyles-inspired-dark/LICENSE */
 	/*! Type    : Forum */
@@ -197,6 +197,7 @@
 		border-radius: 3px !important;
 		height: 30px !important;
 		margin: -2px 5px 8px 2px !important;
+		font-family: sans-serif !important;
 	}
 
 	input[type="reset"]:hover, input[type="button"]:hover, input[type="submit"]:hover {
@@ -862,7 +863,7 @@
 
 	/* Thumbnail Cropper */
 	.jcropper-holder {
-		border: 1px black solid !important;
+		border: 1px #fff solid !important;
 	}
 
 	.jcrop-vline, .jcrop-hline {
@@ -872,12 +873,13 @@
 	}
 
 	.jcrop-handle {
-		border: 1px #eee solid !important;
+		border: 1px #fff solid !important;
 		background-color: #333 !important;
 	}
 
 	.jcrop-tracker {
-		background-color: #cd1313 !important;
+		background-color: #000 !important;
+		opacity: .1 !important;
 	}
 
 	.custom .jcrop-vline, .custom .jcrop-hline {
@@ -1811,7 +1813,7 @@
 
 @-moz-document domain("userstyles.org") {
 	/*! Name    : Userstyles Inspired Dark */
-	/*! Author  : Style-it by: the-j0k3r */
+	/*! Author  : Style-it Themes by: the-j0k3r */
 	/*! Repo    : https://github.com/style-it/userstyles-inspired-dark */
 	/*! License : CC-BY-SA-4.0 https://github.com/style-it/userstyles-inspired-dark/LICENSE */
 	/*! Type    : Website */
@@ -2931,7 +2933,7 @@
 
 @-moz-document domain("userstyles.org") {
 	/*! Name    : Userstyles Inspired Dark */
-	/*! Author  : Style-it by: the-j0k3r */
+	/*! Author  : Style-it Themes by: the-j0k3r */
 	/*! Repo    : https://github.com/style-it/userstyles-inspired-dark */
 	/*! Remix   : https://github.com/StylishThemes/GitHub-Dark/blob/master/themes/codemirror/twilight.min.css */
 	/*! License : CC-BY-SA-4.0 https://github.com/style-it/userstyles-inspired-dark/LICENSE */
